# contrato

./: .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini  settings.ini
app/: settings.py  urls.py
app/accounts/: admin.py  models.py
app/accounts/migrations/: 0001_initial.py  0002_alter_customuser_cpf_alter_customuser_registration.py
app/base/: models.py  urls.py  views.py
app/base/templates/: base.html  home.html
app/biddings/: admin.py  apps.py  models.py
app/biddings/migrations/: 0001_initial.py  0002_alter_bidding_options.py
app/biddings/tests/: factories.py  test_models.py
app/contracts/: admin.py  forms.py  models.py  urls.py  views.py
app/contracts/migrations/: 0001_initial.py  0002_alter_contract_options_and_more.py  0002_contract_inspector_contract_manager.py  0002_contract_value.py  0002_itemcontract_consumed_quantity.py  0003_remove_itemcontract_fiscal_and_more.py  0004_remove_contract_inspector_and_more.py
app/contracts/templates/: contract_create.html  contract_detail.html  contract_list.html
app/contracts/tests/: factories.py  test_models.py
app/dispatches/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
app/dispatches/migrations/: 0001_initial.py
app/dispatches/templates/: approve_requisition.html  movement_list.html  pending_list.html
app/entries/: apps.py  models.py
app/entries/migrations/: 0001_initial.py
app/requisitions/: apps.py  foms.py  models.py  signals.py  urls.py  views.py
app/requisitions/migrations/: 0001_initial.py  (+1 more)
app/suppliers/: admin.py  apps.py  models.py
(+11 files in other folders)
